# federated-heart-disease

./: .gitignore  imulation"  pyproject.toml
src/federated_heart_disease/: cli.py
src/federated_heart_disease/data/: downloader.py  loader.py  preprocessing.py  scaler.py  splitter.py  validator.py
src/federated_heart_disease/evaluation/: metrics.py  report.py
src/federated_heart_disease/federated/: client.py  client_factory.py  config.py  constants.py  parameters.py  server.py  simulation.py
src/federated_heart_disease/models/: logistic.py
src/federated_heart_disease/training/: centralized.py  train.py
src/federated_heart_disease/utils/: io.py
