[project]
name = "federated-heart-disease"
version = "0.1.0"
description = "A research platform for federated learning experiments with Flower."
readme = "README.md"
requires-python = ">=3.12, <3.13"

dependencies = [
  "flwr[simulation]>=1.32.1",
  "numpy>=2.0",
  "pandas>=2.3",
  "scikit-learn>=1.9",
  "matplotlib>=3.10",
  "mlflow>=3.14",
  "hydra-core>=1.3",
  "ucimlrepo>=0.0.7",
  "requests>=2.34.2",
  "joblib>=1.5.3",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>0.12",
  "jupyterlab>=4",
  "basedpyright>=1.39.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/federated-heart-disease"]



